chore: update DocFX configuration
Signed-off-by: Alex Ruiz <a.ruiz.rabasseda@gmail.com>

--- a/Documentation~/projectMetadata.json
+++ b/Documentation~/projectMetadata.json
@@ -2,6 +2,8 @@
   "enableTocForManual": true,
   "enableNewTab": true,
   "pdf": true,
-   "pdfTocPage": true,
-   "pdfPrintBackground": true
+  "pdfTocPage": true,
+  "pdfPrintBackground": true,
+  "pdfCoverPage": "pdfCover.html",
+  "pdfHeaderTemplate": "header.html"
 }
