chore: update projectMetadata.json
Signed-off-by: Alex Ruiz <a.ruiz.rabasseda@gmail.com>

--- a/Documentation~/projectMetadata.json
+++ b/Documentation~/projectMetadata.json
@@ -4,6 +4,6 @@
   "pdf": true,
   "pdfTocPage": true,
   "pdfPrintBackground": true,
-  "pdfCoverPage": "pdfCover.html",
-  "pdfHeaderTemplate": "header.html"
+  "pdfCoverPage": "./pdfCover.html",
+  "pdfHeaderTemplate": "./header.html"
 }
